server/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test_app1
  template:
    metadata:
      labels:
        app: test_app1
    spec:
      containers:
      - name: app1-container
        image: test_apache:latest
        imagePullPolicy: Never
        ports:
          - containerPort: 80
