server/deploy_test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
spec:
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - image: test
          name: test
          imagePullPolicy: Never
          ports:
            - containerPort: 80
